styling: Fixed main height on mobile

--- a/src/components/Landing/index.scss
+++ b/src/components/Landing/index.scss
@@ -23,8 +23,6 @@ main.landing {
 
 @media screen and (max-width: 736px) {
   main.landing {
-    height: auto;
-
     .jumbotron {
       margin-bottom: 0;
     }
